<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#168BC34A"
    tools:context=".EncryptedDatabaseActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/strandhogg_vul_title"
            android:textSize="35sp"
            android:gravity="center"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="32dp" />

        <!-- TextView to display a smiling emoji with larger size -->
        <TextView
            android:id="@+id/legit_act_message_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:text="@string/legit_activity_message"
            android:textSize="25sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/legit_act_emoji_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/legit_activity_emoji"
            android:textSize="100sp"
            android:gravity="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>